# wearit

./: README.md
db/dbschema/: default.esdl
db/dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql  00004.edgeql  00005.edgeql  00006.edgeql  00007.edgeql  00008.edgeql
frontend/: package-lock.json  package.json
frontend/src/: app.html
frontend/src/lib/: index.ts
frontend/src/lib/components/: colorbox.svelte  custom_button.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/outfits/: +page.svelte
frontend/src/routes/profile/: +page.svelte
frontend/src/routes/wardrobe/clothes/: +page.svelte
frontend/src/routes/wardrobe/style/: +page.svelte
server/: Cargo.toml  Rocket.toml
server/public/: index.html
server/src/: auth.rs  libs.rs  main.rs  user.rs  weather_location.rs
server/src/GA/: functions.rs  mod.rs  routes.rs  types.rs
