[package]
name = "nothing2wear"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[lib]
name = "db"
path = "src/libs.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.29.1"
edgedb-tokio = "0.5.0"
rand = "0.8.5"
anyhow = "1.0.72"
edgedb-protocol = "0.6.0"
random_choice = "0.3.2"
colors-transform = "0.2.11"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
uuid = { version = "1.4.1", features = ["v4"] }
reqwest = { version = "0.11.18", features = ["json"] }
url = "2.4.0"
chrono = "0.4.26"
